feat : 로또를 구매할 수 있다